2011-04-04 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_fsgraph.php: added check if loaded the class.

	* include/graphs/functions_fsgraph.php: added check if loaded the class.
	Rename some functions and erased the function "fs_module_chart".

	* include/graphs/functions_pchart.php: erased some debug traces.

	* include/graphs/fgraph.php: cleaned the function "area_graph".

	* operation/agentes/stat_win.php: cleaned source code.

2011-04-03 Miguel de Dios  <miguel.dedios@artica.es>

	* pandora_console/godmode/modules/manage_network_templates.php: fixed the
	output of description and name, and fixed the buttons to delete and export.

2011-04-01  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/graphs/pChart/pDraw.class.php
	include/graphs/fgraph.php
	include/graphs/functions_utils.php: Changed the send data method 
	from sessions to files with serialize functions. Creation of a
	utils functions file. Improvement of the pChart library adding 
	attributes to avoid ticks and grids when the data under the 
	xaxis is empty.

2011-04-01 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/gis_maps/render_view.php: Fixed bad sql query sintax.

2011-03-31 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_graph.php, operation/agentes/stat_win.php: changes for
	to show with new engine.
	 
	* include/graphs/functions_pchart.php,
	include/graphs/pChart/pData.class.php,
	include/graphs/pChart/pDraw.class.php,
	include/graphs/functions_fsgraph.php,
	include/graphs/fgraph.php: part of job is Sergio Martin in my laptop, the
	changes to show borders in the static image graph.

2011-03-31 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/config_process.php: Fixed wrong condition when global 
	configuration for "flash_charts" option is override by user value.

2011-03-31 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/db/oracle.php: Added new functions for Oracle support.